--- a/templates/equipmentList.html
+++ b/templates/equipmentList.html
@@ -40,9 +40,10 @@
 </head>
 <body>
     <div class="header">
-        <input type="search" id="query" name="search" placeholder="Search by Type...">
-        <button id="search-button">Submit</button>
-        <a href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
+      <a href="#" id="sidebar-icon">&#8801;</a>
+      <input type="search" id="query" name="search" placeholder="Search by Type...">
+      <button id="search-button">Submit</button>
+      <a href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
     </div>
 
     <!--sidebar section-->
@@ -63,9 +64,7 @@
     <!-- <marquee behavior="alternate" direction="right" scrollamount="10" margin-left="-300px" margin-right="300px">
       <h1>Welcome To Our Online Inventory System</h1>
     </marquee> -->
-    <div class="marquee-container">
-      <h1 class="marquee">Welcome To Our Online Inventory System</h1>
-    </div>
+    <h1 class="marquee">List of Equipments</h1>
     <div class="location-form">
       <a href="/add-equipment" class="btn1">Add Equipment</a>
       <table border="1" style="overflow: auto;">
@@ -98,5 +97,26 @@
         </tbody>
       </table>
     </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        var sidebarIcon = document.getElementById("sidebar-icon");
+        var sidebar = document.querySelector(".sidebar");
+        var locationform = document.querySelector(".location-form");
+        var marquee = document.querySelector(".marquee");
+
+        sidebarIcon.addEventListener("click", function() {
+            sidebar.classList.toggle("show");
+            locationform.classList.toggle("full-width");
+            marquee.classList.toggle("test");
+
+
+            if (sidebar.classList.contains("show")) {
+              sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#9666; when the sidebar is shown
+            } else {
+              sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#x2630; when the sidebar is hidden
+            }
+        });
+      });
+    </script>
 </body>
 </html>
