--- a/templates/main.html
+++ b/templates/main.html
@@ -12,16 +12,15 @@
 </head>
 <body>
     <div class="header">
-      <a href="#" id="sidebar-icon">&#9666;</a>
-        <input type="search" id="query" name="search" placeholder="Search..." style="margin-left: 70px;" disabled>
-        <button>Submit</button>
-        <span id="login-name">{{ name }}</span>
+      <a href="#" id="sidebar-icon">&#8801;</a>
+      <span id="login-name">{{ name }}</span>
+      <a href="#"><img src="{{ url_for('static', filename='logimg.jpg') }}" alt="" class="logimg" style="background: red;"></a>
     </div>
 
     <!--sidebar section-->
     <section class="sidebar">
         <div class="logo">
-            <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
+          <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
             <a href="/entry_point" class="home active">Home</a>
@@ -33,7 +32,7 @@
         </div>
     </section>
     
-    <h1>Welcome To Our Online Inventory System</h1>
+    <h1 class="mytitle">Welcome To Our Online Inventory System</h1>
     <div class="cards">
         <div class="card" id="card1">
           <h3>N° of Equipment</h3>
@@ -57,5 +56,25 @@
         </div>
       </div>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function() {
+          var sidebarIcon = document.getElementById("sidebar-icon");
+          var sidebar = document.querySelector(".sidebar");
+          var cards = document.querySelector(".cards");
+          var mytitle = document.querySelector(".mytitle");
+
+          sidebarIcon.addEventListener("click", function() {
+              sidebar.classList.toggle("show");
+              cards.classList.toggle("full-width");
+              mytitle.classList.toggle("test");
+
+              if (sidebar.classList.contains("show")) {
+                sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#9666; when the sidebar is shown
+              } else {
+                sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#x2630; when the sidebar is hidden
+              }
+          });
+        });
+      </script>
 </body>
 </html>
