--- a/templates/purchaseList.html
+++ b/templates/purchaseList.html
@@ -37,6 +37,7 @@
 </head>
 <body>
     <div class="header">
+        <a href="#" id="sidebar-icon">&#8801;</a>
         <input type="search" id="query" name="search" placeholder="Search by Store...">
         <button id="search-button">Submit</button>
         <a href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
@@ -60,9 +61,7 @@
     <!-- <marquee behavior="alternate" direction="right" scrollamount="10" margin-left="-300px" margin-right="300px">
       <h1>Welcome To Our Online Inventory System</h1>
     </marquee> -->
-    <div class="marquee-container">
-      <h1 class="marquee">Welcome To Our Online Inventory System</h1>
-    </div>
+    <h1 class="marquee">List of Purchases</h1>
     <div class="purchase-form">
         <a href="/add-purchase" class="btn1">Add Purchase</a>
         <table border="1">
@@ -89,5 +88,25 @@
             </tbody>
         </table>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+          var sidebarIcon = document.getElementById("sidebar-icon");
+          var sidebar = document.querySelector(".sidebar");
+          var purchaseform = document.querySelector(".purchase-form");
+          var marquee = document.querySelector(".marquee");
+  
+          sidebarIcon.addEventListener("click", function() {
+              sidebar.classList.toggle("show");
+              purchaseform.classList.toggle("full-width");
+              marquee.classList.toggle("test");
+  
+              if (sidebar.classList.contains("show")) {
+                sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#9666; when the sidebar is shown
+              } else {
+                sidebarIcon.innerHTML = "&#8801;"; // Change the icon to &#x2630; when the sidebar is hidden
+              }
+          });
+        });
+      </script>
 </body>
 </html>
