Updated Search bar funtionality

--- a/templates/locationList.html
+++ b/templates/locationList.html
@@ -24,8 +24,8 @@
                     <td>${ d.number_of_offices}</td>
                     <td>${ d.head_quater_contact}</td>
                      <td class="action"> 
-                      <a href="/edit_location/location.id"><i class="fa fa-edit" style="font-size:24px"></i></a>
-                      <a href="/delete_location/location.id"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                      <a href="/edit_location/${ d.id }"><i class="fa fa-edit" style="font-size:24px"></i></a>
+                      <a href="/delete_location/${ d.id }"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
                     </td>
                   </tr>
                   `);
