--- a/templates/employeeList.html
+++ b/templates/employeeList.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="{{ url_for('static', filename='main.css') }}"
-    />
+    /> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -28,8 +28,8 @@
                     <td>${ employee.department}</td>
                     <td>${ employee.location}</td>
                     <td class="action">
-                      <a href="/edit_employee/employee.id"><i class="fa fa-edit" style="font-size:24px"></i></a>
-                      <a href="/delete_employee/employee.id"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                      <a href="/edit_employee/${ employee.id }"><i class="fa fa-edit" style="font-size:24px"></i></a>
+                      <a href="/delete_employee/${ employee.id }"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
                     </td>
                   </tr>
                   `);
