--- a/templates/equipmentList.html
+++ b/templates/equipmentList.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script>
+    <script> 
       $(document).ready(function(){
          $('#search-button').on('click', function(){
             var query = $('#query').val();
@@ -27,8 +27,8 @@
                     <td>${ equip.employee}}</td>
                     <td>${ equip.location}</td>
                     <td class="action">
-                      <a href="/edit_equipment/equip.barcode_number"><i class="fa fa-edit" style="font-size:24px"></i></a>
-                      <a href="/delete_equipment/equip.barcode_number"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                        <a href="/edit_equipment/${ equip.barcode_number }"><i class="fa fa-edit" style="font-size:24px"></i></a>
+                        <a href="/delete_equipment/${ equip.barcode_number }"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
                     </td>
                   </tr>
                   `);
