--- a/templates/equipmentList.html
+++ b/templates/equipmentList.html
@@ -24,7 +24,7 @@
                     <td>${ equip.serial_number}</td>
                     <td>${ equip.model_number}</td>
                     <td>${ equip.purchase_date}</td>
-                    <td>${ equip.employee}}</td>
+                    <td>${ equip.employee}</td>
                     <td>${ equip.location}</td>
                     <td class="action">
                         <a href="/edit_equipment/${ equip.barcode_number }"><i class="fa fa-edit" style="font-size:24px"></i></a>
